# branca

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security_audit.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_branca.rs
src/: errors.rs  hchacha20.rs  lib.rs
test/: main.rs
