[package]
name = "branca"
description = "Authenticated encrypted API tokens for Rust. A secure alternative to JWT."
version = "0.9.0"
authors = ["return"]
edition = "2018"
keywords = ["fernet", "branca", "cryptography", "aead", "xchacha20_poly1305"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/branca"
repository = "https://github.com/return/branca"

[badges]
travis-ci = { repository = "return/branca", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
base-x = "0.2.3"
byteorder = "1.3.2"
orion = "0.15.0"

[dev-dependencies]
serde = "^1.0"
serde_derive = "1.0.97"
serde_json = "1.0"