[package]
name = "branca"
description = "Authenticated encrypted API tokens for Rust. A secure alternative to JWT."
version = "0.9.2"
authors = ["return"]
edition = "2018"
keywords = ["fernet", "branca", "cryptography", "aead", "xchacha20_poly1305"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/branca"
repository = "https://github.com/return/branca"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base-x = "0.2.6"
byteorder = "1.3.4"
orion = "0.15.3"

[dev-dependencies]
serde = "^1.0"
serde_derive = "1.0.115"
serde_json = "1.0"